--- a/.github/workflows/sha256-verify.yml
+++ b/.github/workflows/sha256-verify.yml
@@ -1,4 +1,26 @@
-# FILE: .github/workflows/sha256-verify.yml
+# MaMeeFarm™ — Global SHA-256 Verification (from zero)
+
+---
+
+## 0) Verify Commit — คำสั่งตรวจสอบ commit (ดูหลักฐานบน Git)
+ใช้ในเครื่อง (หรือ Codespaces / Git Bash)
+
+### ดูรายการ commit ล่าสุด
+git log --decorate --oneline --graph -n 10
+
+### ดูรายละเอียดไฟล์ที่แก้ใน commit ใด ๆ
+git show <COMMIT_ID>
+
+### ดู history ของไฟล์หนึ่งไฟล์
+git log --follow -- <path/to/file>
+git show <COMMIT_ID>:<path/to/file>
+
+---
+
+## 1) Workflow File — รันตรวจ SHA-256 อัตโนมัติทุก commit/PR
+**PATH:** `.github/workflows/sha256-verify.yml`
+
+```yaml
 name: MaMeeFarm SHA-256 Verification
 on:
   push:
@@ -11,56 +33,63 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Build target file list (MaMeeFarm proof scope)
+      - name: Build tracked file list
+        shell: bash
         run: |
-          set -e
-          # --- declare patterns to verify ---
-          cat > patterns.txt <<'PATTERNS'
+          set -o pipefail
+          cat > patterns.txt <<'PAT'
           valuation/*.md
           registry/collection-proof/*.md
           tools/checksum-guide.md
           README.md
           license/*.md
-          PATTERNS
-          # --- expand patterns to concrete files (ignore missing) ---
-          > files.list
+          PAT
+
+          > files.tracked
           while read -r p; do
             ls -1 $p 2>/dev/null || true
-          done < patterns.txt >> files.list
-          sort -u files.list > files.tracked
-          echo "Tracked files:"
-          cat files.tracked || true
+          done < patterns.txt >> files.tracked
 
-      - name: Compute SHA-256 for tracked files
+          sort -u files.tracked -o files.tracked
+          echo "Tracked files:"; cat files.tracked || true
+
+      - name: Compute current SHA-256
+        shell: bash
         run: |
           if [ ! -s files.tracked ]; then
             echo "::warning::No files matched verification patterns."
             exit 0
           fi
-          # sha256sum is available by default on Ubuntu runners
-          sha256sum $(cat files.tracked) > sha256_current.txt
-          echo "Current checksums:"
+          xargs -a files.tracked -d '\n' sha256sum > sha256_current.txt
           head -n 50 sha256_current.txt || true
 
-      - name: Compare against registry (governance/checksums.sha256)
+      - name: Compare with registry (governance/checksums.sha256)
+        shell: bash
         run: |
           if [ ! -f governance/checksums.sha256 ]; then
-            echo "::warning::Missing governance/checksums.sha256 registry. Add it to enable strict verification."
+            echo "::notice::Missing governance/checksums.sha256. Use current output to create it."
             exit 0
           fi
-          # normalize whitespace for robust diff
-          awk '{$1=$1}1' governance/checksums.sha256 > registry.norm
-          awk '{$1=$1}1' sha256_current.txt > current.norm
+
+          # normalize: remove CRLF, comments, extra spaces
+          sed 's/\r$//' governance/checksums.sha256 \
+            | grep -E '^[a-f0-9]{64}[[:space:]]{2}.+' \
+            | awk '{$1=$1}1' > registry.norm || true
+
+          sed 's/\r$//' sha256_current.txt \
+            | awk '{$1=$1}1' > current.norm
+
           diff -u registry.norm current.norm > sha256_diff.txt || true
+
           if [ -s sha256_diff.txt ]; then
-            echo "::error::SHA-256 mismatch detected. Update registry or fix files."
+            echo "::error::SHA-256 mismatch detected. Update governance/checksums.sha256."
             cat sha256_diff.txt
             exit 1
           else
             echo "✅ Checksums match registry."
           fi
 
-      - name: Upload verification artifacts
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: sha256-report
@@ -68,32 +97,20 @@ jobs:
             files.tracked
             sha256_current.txt
             governance/checksums.sha256
+            registry.norm
+            current.norm
             sha256_diff.txt
 
       - name: Job summary
+        shell: bash
         run: |
           {
-            echo "## MaMeeFarm™ SHA-256 Verification Report"
-            echo ""
+            echo "## MaMeeFarm™ SHA-256 Verification"
             echo "- UTC: $(date -u '+%Y-%m-%d %H:%M:%S')"
             echo "- Tracked files: $(wc -l < files.tracked 2>/dev/null || echo 0)"
             if [ -s sha256_diff.txt ]; then
-              echo ""
-              echo "❌ **Mismatch detected** — see artifact \`sha256-report\` for details."
+              echo "❌ **Mismatch detected** — see artifact *sha256-report*."
             else
-              echo ""
-              echo "✅ **All tracked files verified against registry.**"
+              echo "✅ **All tracked files match the registry.**"
             fi
           } >> "$GITHUB_STEP_SUMMARY"
-
-# --------------------------------------------------------------------
-# FILE: governance/checksums.sha256  (registry used by the workflow)
-# Format = standard sha256sum output: "<hash><two spaces><relative path>"
-# Update this file whenever authoritative content changes:
-#   $ sha256sum $(cat files.tracked) > governance/checksums.sha256
-#
-# --- EXAMPLES (replace with real values from your repo) ---
-9a47b49d2e5f79b4d3f431b02bb93ce8a6c54b16b3a07c8738b172932937f2a8  registry/collection-proof/proof-7-ducks-of-hope.md
-3b1a98d5c1b4e6d44e32efb94d8b5a32e25f67f09df29a3b8e13e6239a10a6c9  valuation/MMFARM-IP-Statement-2025.md
-# (Add lines for each tracked file; keep two spaces between hash and path)
-# --------------------------------------------------------------------
